tests/ui/consts/const-eval/stable-metric/ctfe-labelled-loop.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/ctfe-labelled-loop.rs:6:5
   |
LL | /     'mylabel: loop {
LL | |         if i > n {
LL | |             break 'mylabel
LL | |         }
LL | |         i += 1;
LL | |     }
   | |_____^ exceeded interpreter step limit (see `#[const_eval_limit]`)
   |
note: inside `labelled_loop`
  --> $DIR/ctfe-labelled-loop.rs:6:5
   |
LL | /     'mylabel: loop {
LL | |         if i > n {
LL | |             break 'mylabel
LL | |         }
LL | |         i += 1;
LL | |     }
   | |_____^
note: inside `X`
  --> $DIR/ctfe-labelled-loop.rs:15:16
   |
LL | const X: u32 = labelled_loop(19);
   |                ^^^^^^^^^^^^^^^^^

note: erroneous constant used
  --> $DIR/ctfe-labelled-loop.rs:18:16
   |
LL |     println!("{X}");
   |                ^

note: erroneous constant used
  --> $DIR/ctfe-labelled-loop.rs:18:16
   |
LL |     println!("{X}");
   |                ^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant used
  --> $DIR/ctfe-labelled-loop.rs:18:16
   |
LL |     println!("{X}");
   |                ^
   |
   = note: this note originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
